# My_First_Step

./: README.md  oz_AI.yaml
bhg/: Ch21_task.ipynb  Ch22_task.ipynb  Chaoter0113_task.ipynb  Chaper1416_task.ipynb  Chapter0508_과제.ipynb  day2_2.py  day_3.py  day_4.py  day_4_function.py  mini_project.py
bhg/08_OS/: 01.md
bhg/08_scraping/: kream.py  melon.py  melon_work.py  naver.py  naver_work.py  s_naver.py
bhg/8day/: task_1.ipynb
bhg/Django/Challange/Day_1/: .gitignore  pyproject.toml
bhg/Django/Challange/Day_1/config/: settings.py  urls.py
bhg/Django/Challange/Day_2/: pyproject.toml
bhg/Django/Challange/Day_2/config/: settings.py  urls.py
bhg/Django/Challange/Day_2/todo/: views.py
bhg/Django/Challange/Day_2/todo/templates/: todo_list.html
bhg/Django/Challange/Day_3/config/: settings.py  urls.py
bhg/Django/Challange/Day_4/config/: urls.py
bhg/Django/Challange/Day_4/todo/: views.py
bhg/HTML/: 04-HTML기본문법.html  admin.html  join.html  sample.html  survay.html
bhg/M_project/: .gitignore
bhg/M_project/fastapi_mini_project/: .env.prod  alembic.ini  pyproject.toml
bhg/M_project/fastapi_mini_project/app/: database.py  main.py
bhg/M_project/fastapi_mini_project/app/core/: config.py
bhg/backjoon/: 1.py
bhg/db/: chapter01_06.ipynb  chapter07_13.ipynb
bhg/etc/: 1212_mento.py  Chapter1720_task.ipynb  day_5.py  test_game.py
bhg/flask/: app.py
bhg/flask/day1/Jinja_Template/: app.py
bhg/flask/day3/dum/: app.py  models.py
bhg/flask/day3/dum/migrations/: env.py
bhg/flask/day3/flask-mysql/: app.py  user_routes.py
github/: readme.md
(+3 files in other folders)
