[project]
name = "chapter-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Ha_Yan",email = "xcvbnmz1238@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
